--- a/LocationBot/appsettings.json
+++ b/LocationBot/appsettings.json
@@ -1,9 +1,14 @@
 {
-    "KeyVault": {
-        "KeyVaultName": "CatalystPrimaryVault",
-        "AzureADClientId": "efba4a6a-88a2-49fb-94ec-597b019bad4c",
-        "AzureADTennantId": "72a62b80-8010-4183-88a1-ea6880998ab4",
-        "AzureADClientSecret": "xqR8Q~f7zKTquqnBS54wLvKjyZNdVMlP8Ztmiauo",
-        "SecretName": "LocationBot"
-    }
+  "KeyVault": {
+    "KeyVaultName": "CatalystPrimaryVault",
+    "AzureADClientId": "efba4a6a-88a2-49fb-94ec-597b019bad4c",
+    "AzureADTennantId": "72a62b80-8010-4183-88a1-ea6880998ab4",
+    "AzureADClientSecret": "xqR8Q~f7zKTquqnBS54wLvKjyZNdVMlP8Ztmiauo",
+    "SecretName": "LocationBot"
+  },
+  "SNMP": {
+    "UPSIPAddress": "PowerAlertIP",
+    "UPSSNMPPort": "PowerAlertSNMP",
+    "UPSCommunity": "PowerAlertCommunity"
+  }
 }
