--- a/LocationBot/LocationBot.csproj
+++ b/LocationBot/LocationBot.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <None Remove="Discord.Net" />
     <None Remove="Lextm.SharpSnmpLib" />
+    <None Remove="SpeedTest.NetCore" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.6.0" />
@@ -21,6 +22,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.0" />
     <PackageReference Include="Lextm.SharpSnmpLib" Version="12.4.0" />
+    <PackageReference Include="SpeedTest.NetCore" Version="2.1.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
