Updated appsettings.json for Topology Checks

--- a/LocationBot/appsettings.json
+++ b/LocationBot/appsettings.json
@@ -10,5 +10,15 @@
     "UPSIPAddress": "PowerAlertIP",
     "UPSSNMPPort": "PowerAlertSNMP",
     "UPSCommunity": "PowerAlertCommunity"
+  },
+  "Topology": {
+    "GW" : "",
+    "AggA1" : "",
+    "AggA2" : "",
+    "CoreSW1" : "",
+    "CoreSW2" : "",
+    "AccSW1" : "",
+    "AP01" : "",
+    "AP02" : ""
   }
 }
