Added Secret Values into KeyVault

--- a/LocationBot/appsettings.json
+++ b/LocationBot/appsettings.json
@@ -12,13 +12,13 @@
     "UPSCommunity": "PowerAlertCommunity"
   },
   "Topology": {
-    "GW" : "",
-    "AggA1" : "",
-    "AggA2" : "",
-    "CoreSW1" : "",
-    "CoreSW2" : "",
-    "AccSW1" : "",
-    "AP01" : "",
-    "AP02" : ""
+    "GW" : "GWIP",
+    "AggA1" : "AggA1IP",
+    "AggA2" : "AggA2IP",
+    "CoreSW1" : "CoreSW1IP",
+    "CoreSW2" : "CoreSW2IP",
+    "AccSW1" : "AccSW1IP",
+    "AP01" : "AP01IP",
+    "AP02" : "AP02IP"
   }
 }
