Topology Health Check Complete

--- a/LocationBot/appsettings.json
+++ b/LocationBot/appsettings.json
@@ -19,6 +19,7 @@
     "CoreSW2" : "CoreSW2IP",
     "AccSW1" : "AccSW1IP",
     "AP01" : "AP01IP",
-    "AP02" : "AP02IP"
+    "AP02" : "AP02IP",
+    "LTE" : "LTEIP"
   }
 }
