--- a/Catalyst/appsettings.json
+++ b/Catalyst/appsettings.json
@@ -25,5 +25,9 @@
   "Hardware": {
     "DNS01": "DNS01IP",
     "DNS02": "DNS02IP"
+  },
+  "PowerAlert": {
+    "PowerUser": "PowerUser",
+    "PowerPass": "PowerPass"
   }
 }
