--- a/Catalyst/Dockerfile
+++ b/Catalyst/Dockerfile
@@ -5,6 +5,9 @@
 
 FROM mcr.microsoft.com/dotnet/runtime:6.0 AS base
 WORKDIR /app
+RUN mkdir ~/.config/
+RUN mkdir ~/.config/ookla/
+RUN echo '{"Settings": {"LicenseAccepted": "604ec27f828456331ebf441826292c49276bd3c1bee1a2f65a6452f505c4061c"}}' > ~/.config/ookla/speedtest-cli.json
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
