--- a/Catalyst/Catalyst.csproj
+++ b/Catalyst/Catalyst.csproj
@@ -21,6 +21,7 @@
     <None Remove="Discord.Net.Analyzers" />
     <None Remove="SSH.NET" />
     <None Remove="Redistributables\Build\" />
+    <None Remove="UnitsNet" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Azure.Identity" Version="1.6.1" />
@@ -49,6 +50,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.16.1" />
     <PackageReference Include="Microsoft.WSMan.Management" Version="7.2.6" />
     <PackageReference Include="SSH.NET" Version="2020.0.2" />
+    <PackageReference Include="UnitsNet" Version="4.144.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings.json">
