--- a/Catalyst/appsettings.json
+++ b/Catalyst/appsettings.json
@@ -24,10 +24,12 @@
   },
   "Hardware": {
     "DNS01": "DNS01IP",
-    "DNS02": "DNS02IP"
+    "DNS02": "DNS02IP",
+    "MinecraftHost": "MinecraftHost"
   },
   "PowerAlert": {
     "PowerUser": "PowerUser",
-    "PowerPass": "PowerPass"
+    "PowerPass": "PowerPass",
+    "MinecraftUser": "MinecraftUser"
   }
 }
