Updated MC Pass

--- a/Catalyst/appsettings.json
+++ b/Catalyst/appsettings.json
@@ -30,6 +30,7 @@
   "PowerAlert": {
     "PowerUser": "PowerUser",
     "PowerPass": "PowerPass",
-    "MinecraftUser": "MinecraftUser"
+    "MinecraftUser": "MinecraftUser",
+    "MinecraftPass": "MinecraftPassword"
   }
 }
