Added Heartbeat Monitoring

--- a/Catalyst/appsettings.json
+++ b/Catalyst/appsettings.json
@@ -4,7 +4,8 @@
     "AzureADClientId": "efba4a6a-88a2-49fb-94ec-597b019bad4c",
     "AzureADTennantId": "72a62b80-8010-4183-88a1-ea6880998ab4",
     "AzureADClientSecret": "xqR8Q~f7zKTquqnBS54wLvKjyZNdVMlP8Ztmiauo",
-    "SecretName": "Catalyst"
+    "SecretName": "Catalyst",
+    "Heartbeat" : "heartbeat"
   },
   "SNMP": {
     "UPSIPAddress": "PowerAlertIP",
