--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -74,6 +74,6 @@ jobs:
           context: .
           file: Catalyst/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: catalyst${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
