--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -11,9 +11,15 @@ updates:
       interval: "daily"
       time: "00:00"
       timezone: "America/New_York"
+    assignees:
+      - "arcusic"
+    open-pull-requests-limit: 20
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
       interval: "daily"
       time: "00:00"
       timezone: "America/New_York"
+    assignees:
+      - "arcusic"
+    open-pull-requests-limit: 20
