Update Network Topology

--- a/Catalyst/appsettings.json
+++ b/Catalyst/appsettings.json
@@ -14,18 +14,22 @@
   },
   "Topology": {
     "GW": "GWIP",
-    "AggA1": "AggA1IP",
+    "AggP": "AggA1IP",
     "AggA2": "AggA2IP",
     "CoreSW1": "CoreSW1IP",
     "CoreSW2": "CoreSW2IP",
     "AccSW1": "AccSW1IP",
     "AP01": "AP01IP",
     "AP02": "AP02IP",
-    "LTE": "LTEIP"
+    "LTE": "LTEIP",
+    "PDU": "PDUIP",
+    "ONT":  "ONTIP"
   },
   "Hardware": {
     "DNS01": "DNS01IP",
     "DNS02": "DNS02IP",
+    "ESX01": "ESX01IP",
+    "ESX02": "ESX02IP",
     "MinecraftHost": "MinecraftHost"
   },
   "PowerAlert": {
