--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.4'
+name: the-catalyst
 
 services:
   catalyst:
@@ -6,6 +7,8 @@ services:
     build:
       context: .
       dockerfile: Catalyst/Dockerfile
+    depends_on:
+      - mssql
   mssql:
     image: ${DOCKER_REGISTRY-}catalyst_db
     build:
