--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -67,7 +67,7 @@ jobs:
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
-      - name: Build Docker image (Catalyst PR Only)
+      - name: Build Docker image (PR Only)
         if: github.event_name == 'pull_request'
         id: build-pr
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
@@ -77,20 +77,8 @@ jobs:
           push: ${{ github.event_name != 'pull_request' }}
           tags: catalyst${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
-      - name: Build Docker image (MSSQL PR Only)
-        if: github.event_name == 'pull_request'
-        id: build-pr
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-        with:
-          context: .
-          file: Catalyst/Redistributables/SQL/Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          name: catalyst/catalyst_db:main
-          labels: ${{ steps.meta.outputs.labels }}
       
-      - name: Build and Push Docker image (Catalyst)
+      - name: Build and Push Docker image
         if: github.event_name != 'pull_request'
         id: build-and-push
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
@@ -101,14 +89,3 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Build and Push Docker image (MSSQL)
-        if: github.event_name != 'pull_request'
-        id: build-and-push
-        uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
-        with:
-          context: .
-          file: Catalyst/Redistributables/SQL/Dockerfile
-          push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
-          name: catalyst/catalyst_db:main
-          labels: ${{ steps.meta.outputs.labels }}
