--- a/.github/workflows/docker-publish-db.yml
+++ b/.github/workflows/docker-publish-db.yml
@@ -1,4 +1,4 @@
-name: Docker (Catalyst)
+name: Docker (Catalyst DB)
 
 # This workflow uses actions that are not certified by GitHub.
 # They are provided by a third-party and are governed by
@@ -16,7 +16,7 @@ on:
 
 env:
   # github.repository as <account>/<repo>
-  IMAGE_NAME: catalyst
+  IMAGE_NAME: catalyst_db
 
 
 jobs:
@@ -67,25 +67,24 @@ jobs:
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
-      - name: Build Docker image (PR Only)
+      - name: Build Docker image (MSSQL PR Only)
         if: github.event_name == 'pull_request'
         id: build-pr
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: .
-          file: Catalyst/Dockerfile
+          file: Catalyst/Redistributables/SQL/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: catalyst${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-      
-      - name: Build and Push Docker image
+
+      - name: Build and Push Docker image (MSSQL)
         if: github.event_name != 'pull_request'
         id: build-and-push
         uses: docker/build-push-action@3b5e8027fcad23fda98b2e3ac259d8d67585f671
         with:
           context: .
-          file: Catalyst/Dockerfile
+          file: Catalyst/Redistributables/SQL/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-
