--- a/.github/workflows/docker-publish-db.yml
+++ b/.github/workflows/docker-publish-db.yml
@@ -53,7 +53,7 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
-          registry: ${{ secrets.REGISTRY }}
+          registry: ${{ secrets.DB_REGISTRY }}
           username: ${{ secrets.USER }}
           password: ${{ secrets.TOKEN }}
 
@@ -63,7 +63,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@507c2f2dc502c992ad446e3d7a5dfbe311567a96
         with:
-          images: ${{ secrets.REGISTRY }}/catalyst
+          images: ${{ secrets.DB_REGISTRY }}/catalyst
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
