Docker Compose Updates

--- a/Catalyst/Dockerfile
+++ b/Catalyst/Dockerfile
@@ -5,13 +5,13 @@
 
 FROM mcr.microsoft.com/dotnet/runtime:latest AS base
 WORKDIR /app
+RUN apt-get update
+RUN apt-get -y upgrade
+RUN useradd -m catalyst
+USER catalyst
 RUN mkdir ~/.config/
 RUN mkdir ~/.config/ookla/
 RUN echo '{"Settings": {"LicenseAccepted": "604ec27f828456331ebf441826292c49276bd3c1bee1a2f65a6452f505c4061c"}}' > ~/.config/ookla/speedtest-cli.json
-RUN apt-get update
-RUN apt-get -y upgrade
-RUN useradd catalyst
-USER catalyst
 
 FROM mcr.microsoft.com/dotnet/sdk:latest AS build
 USER root
