--- a/.github/workflows/docker-publish-db.yml
+++ b/.github/workflows/docker-publish-db.yml
@@ -75,7 +75,7 @@ jobs:
           context: .
           file: Catalyst/Redistributables/SQL/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: catalyst${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
 
       - name: Build and Push Docker image (MSSQL)
