--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,7 +16,7 @@ on:
 
 env:
   # github.repository as <account>/<repo>
-  IMAGE_NAME: catalyst
+  IMAGE_NAME: ${{ secrets.REGISTRY }}/catalyst
 
 
 jobs:
@@ -53,7 +53,6 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: docker/login-action@f4ef78c080cd8ba55a85445d5b36e214a81df20a
         with:
-          registry: ${{ secrets.REGISTRY }}
           username: ${{ secrets.USER }}
           password: ${{ secrets.TOKEN }}
 
@@ -75,7 +74,7 @@ jobs:
           context: .
           file: Catalyst/Dockerfile
           push: ${{ github.event_name != 'pull_request' }}
-          tags: catalyst${{ steps.meta.outputs.tags }}
+          tags: ${{ secrets.REGISTRY }}${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
       
       - name: Build and Push Docker image
