--- a/Catalyst/Dockerfile
+++ b/Catalyst/Dockerfile
@@ -8,10 +8,10 @@ WORKDIR /app
 RUN apt-get update \
  && apt-get -y upgrade \
  && apt-get -y install curl iputils-ping \
+ && curl -s https://packagecloud.io/install/repositories/ookla/speedtest-cli/script.deb.sh | bash \
+ && apt-get -y install speedtest
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
-RUN curl -s https://packagecloud.io/install/repositories/ookla/speedtest-cli/script.deb.sh | bash
-RUN apt-get -y install speedtest
 RUN mkdir /root/.config/
 RUN mkdir /root/.config/ookla/
 RUN echo '{"Settings": {"LicenseAccepted": "604ec27f828456331ebf441826292c49276bd3c1bee1a2f65a6452f505c4061c"}}' > /root/.config/ookla/speedtest-cli.json
