--- a/Catalyst/Dockerfile
+++ b/Catalyst/Dockerfile
@@ -7,9 +7,9 @@ FROM mcr.microsoft.com/dotnet/runtime:latest AS base
 WORKDIR /app
 RUN apt-get update \
  && apt-get -y upgrade \
- && apt-get -y install curl iputils-ping \
+ && apt-get -y --no-install-recommends install curl iputils-ping \
  && curl -s https://packagecloud.io/install/repositories/ookla/speedtest-cli/script.deb.sh | bash \
- && apt-get -y install speedtest \
+ && apt-get -y --no-install-recommends install speedtest \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 RUN mkdir /root/.config/
