--- a/Catalyst/appsettings.json
+++ b/Catalyst/appsettings.json
@@ -5,7 +5,8 @@
     "AzureADTennantId": "72a62b80-8010-4183-88a1-ea6880998ab4",
     "AzureADClientSecret": "xqR8Q~f7zKTquqnBS54wLvKjyZNdVMlP8Ztmiauo",
     "SecretName": "Catalyst",
-    "Heartbeat" : "heartbeat"
+    "SecretNameDev": "CatalystDev",
+    "Heartbeat": "heartbeat"
   },
   "SNMP": {
     "UPSIPAddress": "PowerAlertIP",
