--- a/Catalyst/Redistributables/SQL/Dockerfile
+++ b/Catalyst/Redistributables/SQL/Dockerfile
@@ -6,6 +6,7 @@
 FROM mcr.microsoft.com/mssql/server:2022-latest AS base
 USER root
 RUN apt-get update \
+ && apt-get -y install gnupg \
  && apt-get -y upgrade \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
