Added writable volume and network connection

--- a/Catalyst/Catalyst.csproj
+++ b/Catalyst/Catalyst.csproj
@@ -162,8 +162,8 @@
     <None Update="Redistributables\SpeedTest\speedtest.exe">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Redistributables\SQL\" />
+    <None Update="Redistributables\Scripts\startup.sh">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
