--- a/Catalyst/Dockerfile
+++ b/Catalyst/Dockerfile
@@ -6,10 +6,12 @@
 FROM mcr.microsoft.com/dotnet/runtime:latest AS base
 WORKDIR /app
 RUN apt-get update \
+ && apt-get -y --no-install-recommends install curl
+RUN curl -s https://packagecloud.io/install/repositories/ookla/speedtest-cli/script.deb.sh | bash \
+ && apt-get purge -y --auto-remove curl
+RUN apt-get update \
+ && apt-get -y --no-install-recommends install speedtest iputils-ping \
  && apt-get -y upgrade \
- && apt-get -y --no-install-recommends install curl iputils-ping \
- && curl -s https://packagecloud.io/install/repositories/ookla/speedtest-cli/script.deb.sh | bash \
- && apt-get -y --no-install-recommends install speedtest \
  && apt-get clean \
  && rm -rf /var/lib/apt/lists/*
 RUN mkdir /root/.config/
