--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,56 +1,49 @@
 version: '3.4'
 name: the-catalyst
 
+volumes:
+  data:
+
 networks:
   catalyst:
     name: catalyst
     driver: bridge
-  utilities:
-    name: utilities
-    driver: bridge
 
 services:
   catalyst:
-    container_name: catalyst
-    image: index.docker.io/arcusic/catalyst:main
-    networks:
+    container_name: catalyst-dev
+    # network_mode: host
+    networks: 
       - catalyst
-    labels:
-      - "com.centurylinklabs.watchtower.scope=catalyst"
     restart: always
     build:
       context: .
       network: host
       dockerfile: Catalyst/Dockerfile
     links:
-      - mssql:database
+        - mssql:database
 
   mssql:
     container_name: catalyst-db
-    image: index.docker.io/arcusic/catalyst_db:main
-    networks:
+    # network_mode: host
+    networks: 
       - catalyst
-    labels:
-      - "com.centurylinklabs.watchtower.scope=catalyst"
     restart: always
     build:
       context: .
       network: host
       dockerfile: Catalyst/Redistributables/SQL/Dockerfile
+    volumes:
+      - data:/mssql
     environment:
       ACCEPT_EULA: y
-
-  watchtower:
-    container_name: catalyst-updtr
-    image: containrrr/watchtower:latest
-    networks:
-     - utilities
-    labels:
-      - "com.centurylinklabs.watchtower.scope=catalyst"
-    restart: always
-    environment:
-      DOCKER_CONFIG: /config
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-      - /root/.docker/config.json:/config/config.json
-    command: --interval 300 --scope catalyst
+      SA_PASSWORD: "InitialPassword1!"
+      MSSQL_PID: Developer
+      MSSQL_TCP_PORT: 1433
+      MSSQL_BACKUP_DIR: /mssql/backup
+      MSSQL_DATA_DIR: /mssql/data
+      MSSQL_LOG_DIR: /mssql/log
+      MSSQL_DUMP_DIR: /mssql/dump
+      MSSQL_MASTER_DATA_FILE: /mssql/data/master.mdf
+      MSSQL_MASTER_LOG_FILE: /mssql/log/mastlog.ldf
+      MSSQL_ERROR_LOG_FILE: /mssql/log/errorlog
