Optimized Container Storage

--- a/Catalyst/Redistributables/SQL/Dockerfile
+++ b/Catalyst/Redistributables/SQL/Dockerfile
@@ -10,16 +10,11 @@ RUN apt-get update
 RUN apt-get -y upgrade
 RUN apt-get clean
 RUN rm -rf /var/lib/apt/lists/*
-COPY ./Catalyst/Redistributables/SQL/secrets/entrypoint.sh /entrypoint.sh
-RUN mkdir -p /mssql/backup
-RUN mkdir -p /mssql/data
-RUN mkdir -p /mssql/log
-RUN mkdir -p /mssql/dump
-RUN chown -R mssql:mssql /mssql/backup
-RUN chown -R mssql:mssql /mssql/data
-RUN chown -R mssql:mssql /mssql/log
-RUN chown -R mssql:mssql /mssql/dump
+COPY ./Catalyst/Redistributables/SQL/entrypoint.sh /entrypoint.sh
+RUN mkdir -p /mssql
+# RUN chown -R mssql:mssql /mssql/data
+# RUN chown -R mssql:mssql /mssql/log
+# RUN chown -R mssql:mssql /mssql/dump
 RUN chown mssql:mssql /entrypoint.sh
-USER mssql
 RUN chmod +x /entrypoint.sh
 CMD ["/entrypoint.sh"]
